--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,8 @@
   },
   "routes": [
     { "src": "/api/projects/(?<id>[^/]+)", "dest": "/api/projects_[id].js" },
-    { "src": "/api/projects", "dest": "/api/projects.js" }
+    { "src": "/api/projects", "dest": "/api/projects.js" },
+    { "src": "^(?!/api).*", "dest": "/index.html" }
   ],
   "env": {
     "MONGODB_URI": "@mongo-uri",
