--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.19.7",
+    "@vitejs/plugin-react": "^4.3.1",
     "mongoose": "^8.6.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite": "^5.4.10"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "vite": "^5.4.10"
+    "eslint": "^8.57.0"
   }
 }
 
